apps/build-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-controller
spec:
  selector:
    matchLabels:
      app: deploy-controller
  template:
    metadata:
      labels:
        app: deploy-controller
    spec:
      serviceAccountName: deploy-controller
      containers:
      - name: controller
        image: localhost:5000/build-server:latest

---
# External service for the deployment controller
apiVersion: v1
kind: Service
metadata:
  name: deploy-controller
spec:
  selector:
    app: deploy-controller
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30109
  type: NodePort

# Service account and permissions for Kaniko
---
# Egress network policy that blocks all traffic for gameclient pods except to gameserver pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gameclient-policy
spec:
  podSelector:
    matchLabels:
      is-gameclient: "true"
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
      podSelector:
        matchLabels:
          app: gameserver
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 8080
  # Allow DNS resolution
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
